--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -2,7 +2,5 @@
   display: flex;
   flex-direction: column;
   gap: 20dvh;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
   padding-bottom: 4rem;
 }
