--- a/src/styles/uiSnippet.css
+++ b/src/styles/uiSnippet.css
@@ -2,7 +2,7 @@
   position: relative;
   overflow: hidden;
   min-width: 400px;
-  width: 50%;
+  width: 70%;
   aspect-ratio: 16/9;
   border-radius: 1em;
 }
